* $wgDBAhandler was removed as the only class using it was also removed
* The 'max threads' setting was removed from $wgDBservers.
* Support for AdminSettings.php has been completely removed. All configuration
  belongs in LocalSettings.php.
* Special:ProtectedPages shows now a table. The timestamp, the reason and
  the protecting user is also shown.

=== New features in 1.23 ===
* ResourceLoader can utilize the Web Storage API to cache modules client-side.
  Compared to the browser cache, caching in Web Storage allows ResourceLoader
  to be more granular about evicting stale modules from the cache while
  retaining the ability to retrieve multiple modules in a single HTTP request.
  This capability can be enabled by setting $wgResourceLoaderStorageEnabled to
  true. This feature is currently considered experimental and should only be
  enabled with care.
* (bug 6092) Add expensive parser functions {{REVISIONID:}}, {{REVISIONUSER:}}
  and {{REVISIONTIMESTAMP:}} (with friends).
* Add "wgRelevantUserName" to mw.config containing the current
  Skin::getRelevantUser value.
* (bug 56033) Add content model to the page information.
* Added Article::MissingArticleConditions hook to give extensions a chance to
  hide their (unrelated) log entries.
* Added LonelyPagesQuery hook to let extensions modify the query used to
  generate Special:LonelyPages.
* Added $wgOpenSearchDefaultLimit defining the default number of entries to show
  on action=opensearch API call.
* For namespaces with $wgNamespaceProtection (including the MediaWiki
  namespace), the "protect" tab will be shown only if there are restriction
  levels available that would restrict editing beyond what
  $wgNamespaceProtection already applies. The protection form will offer only
  those protection levels.
* Added $wgAPIFormatModules, allowing extensions to add additional output
  formatting modules for the API.
* (bug 47812) The MediaWiki:Group-user.{css,js} pages can now be used to add