@@ -36,6 +36,11 @@ production.
   belongs in LocalSettings.php.
 * Special:ProtectedPages shows now a table. The timestamp, the reason and
   the protecting user is also shown.
+* $wgLocalInterwikis is an array containing multiple local interwiki prefixes
+  (interwiki prefixes that point back to the current wiki). This effectively
+  allows more than one value of $wgLocalInterwiki to be specified and
+  understood by the parser. The value of $wgLocalInterwiki is automatically
+  prepended to the start of this array.
 
 === New features in 1.23 ===
 * ResourceLoader can utilize the Web Storage API to cache modules client-side.
@@ -227,6 +232,9 @@ changes to languages because of Bugzilla reports.
 * Thumbnails that keep failing to render in thumb.php will be rate-limited
   againt further render attempts for 1 hour. $wgAttemptFailureEpoch can be
   altered to reset all rate-limited thumbnails at once.
+* RecentChange::mExtra['lang'] is no longer used. Extensions should read from
+  other configuration variables, including $wgLocalInterwikis, to identify the
+  current wiki.
 
 ==== Removed classes ====
 * FakeMemCachedClient (deprecated in 1.18)
